tests/models/snapshots/attach_on_user_create.snap
---
source: tests/models/availabilities.rs
expression: user_availability
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    belongs_to: 1,
}
