tests/models/snapshots/get_current_availabilities_for_a_day_starting_monday_333_pm.snap
---
source: tests/models/availabilities.rs
expression: windows
---
[
    AvailabilityWindow {
        start: 2025-01-14T00:00:00,
        end: 2025-01-14T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T00:30:00,
        end: 2025-01-14T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T17:00:00,
        end: 2025-01-14T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T17:30:00,
        end: 2025-01-14T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T18:00:00,
        end: 2025-01-14T18:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T18:30:00,
        end: 2025-01-14T19:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T19:00:00,
        end: 2025-01-14T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T19:30:00,
        end: 2025-01-14T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T20:00:00,
        end: 2025-01-14T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T20:30:00,
        end: 2025-01-14T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T21:00:00,
        end: 2025-01-14T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T21:30:00,
        end: 2025-01-14T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T22:00:00,
        end: 2025-01-14T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T22:30:00,
        end: 2025-01-14T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T23:00:00,
        end: 2025-01-14T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T23:30:00,
        end: 2025-01-15T00:00:00,
    },
]
