tests/models/snapshots/get_current_availabilities_for_monday_901_am.snap
---
source: tests/models/availabilities.rs
expression: windows
---
[
    AvailabilityWindow {
        start: 2025-01-13T17:30:00,
        end: 2025-01-13T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T19:00:00,
        end: 2025-01-13T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T19:30:00,
        end: 2025-01-13T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T20:00:00,
        end: 2025-01-13T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T20:30:00,
        end: 2025-01-13T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T21:00:00,
        end: 2025-01-13T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T21:30:00,
        end: 2025-01-13T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T22:00:00,
        end: 2025-01-13T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T22:30:00,
        end: 2025-01-13T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T23:00:00,
        end: 2025-01-13T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T23:30:00,
        end: 2025-01-14T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T00:00:00,
        end: 2025-01-14T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T00:30:00,
        end: 2025-01-14T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T17:00:00,
        end: 2025-01-14T17:30:00,
    },
]
