tests/models/snapshots/get_current_availabilities_for_next_7_days_with_half_hour_durations.snap
---
source: tests/models/availabilities.rs
expression: windows
---
[
    AvailabilityWindow {
        start: 2025-01-13T17:00:00,
        end: 2025-01-13T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T17:30:00,
        end: 2025-01-13T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T19:00:00,
        end: 2025-01-13T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T19:30:00,
        end: 2025-01-13T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T20:00:00,
        end: 2025-01-13T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T20:30:00,
        end: 2025-01-13T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T21:00:00,
        end: 2025-01-13T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T21:30:00,
        end: 2025-01-13T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T22:00:00,
        end: 2025-01-13T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T22:30:00,
        end: 2025-01-13T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T23:00:00,
        end: 2025-01-13T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-13T23:30:00,
        end: 2025-01-14T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T00:00:00,
        end: 2025-01-14T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T00:30:00,
        end: 2025-01-14T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T17:00:00,
        end: 2025-01-14T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T17:30:00,
        end: 2025-01-14T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T18:00:00,
        end: 2025-01-14T18:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T18:30:00,
        end: 2025-01-14T19:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T19:00:00,
        end: 2025-01-14T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T19:30:00,
        end: 2025-01-14T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T20:00:00,
        end: 2025-01-14T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T20:30:00,
        end: 2025-01-14T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T21:00:00,
        end: 2025-01-14T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T21:30:00,
        end: 2025-01-14T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T22:00:00,
        end: 2025-01-14T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T22:30:00,
        end: 2025-01-14T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T23:00:00,
        end: 2025-01-14T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-14T23:30:00,
        end: 2025-01-15T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T00:00:00,
        end: 2025-01-15T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T00:30:00,
        end: 2025-01-15T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T17:00:00,
        end: 2025-01-15T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T17:30:00,
        end: 2025-01-15T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T18:00:00,
        end: 2025-01-15T18:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T18:30:00,
        end: 2025-01-15T19:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T19:00:00,
        end: 2025-01-15T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T19:30:00,
        end: 2025-01-15T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T20:00:00,
        end: 2025-01-15T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T20:30:00,
        end: 2025-01-15T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T21:00:00,
        end: 2025-01-15T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T21:30:00,
        end: 2025-01-15T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T22:00:00,
        end: 2025-01-15T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T22:30:00,
        end: 2025-01-15T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T23:00:00,
        end: 2025-01-15T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-15T23:30:00,
        end: 2025-01-16T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T00:00:00,
        end: 2025-01-16T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T00:30:00,
        end: 2025-01-16T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T17:00:00,
        end: 2025-01-16T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T17:30:00,
        end: 2025-01-16T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T18:00:00,
        end: 2025-01-16T18:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T18:30:00,
        end: 2025-01-16T19:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T19:00:00,
        end: 2025-01-16T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T19:30:00,
        end: 2025-01-16T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T20:00:00,
        end: 2025-01-16T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T20:30:00,
        end: 2025-01-16T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T21:00:00,
        end: 2025-01-16T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T21:30:00,
        end: 2025-01-16T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T22:00:00,
        end: 2025-01-16T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T22:30:00,
        end: 2025-01-16T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T23:00:00,
        end: 2025-01-16T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-16T23:30:00,
        end: 2025-01-17T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T00:00:00,
        end: 2025-01-17T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T00:30:00,
        end: 2025-01-17T01:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T17:00:00,
        end: 2025-01-17T17:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T17:30:00,
        end: 2025-01-17T18:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T18:00:00,
        end: 2025-01-17T18:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T18:30:00,
        end: 2025-01-17T19:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T19:00:00,
        end: 2025-01-17T19:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T19:30:00,
        end: 2025-01-17T20:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T20:00:00,
        end: 2025-01-17T20:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T20:30:00,
        end: 2025-01-17T21:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T21:00:00,
        end: 2025-01-17T21:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T21:30:00,
        end: 2025-01-17T22:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T22:00:00,
        end: 2025-01-17T22:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T22:30:00,
        end: 2025-01-17T23:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T23:00:00,
        end: 2025-01-17T23:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-17T23:30:00,
        end: 2025-01-18T00:00:00,
    },
    AvailabilityWindow {
        start: 2025-01-18T00:00:00,
        end: 2025-01-18T00:30:00,
    },
    AvailabilityWindow {
        start: 2025-01-18T00:30:00,
        end: 2025-01-18T01:00:00,
    },
]
