tests/models/snapshots/handle_create_with_invalid_timezone@users.snap
---
source: tests/models/users.rs
expression: new_user
---
Err(
    DbErr(
        Custom(
            "{\"timezone\":[{\"code\":\"timezone\",\"message\":\"Invalid timezone\"}]}",
        ),
    ),
)
